# OpenCortex

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_CN  README_CN.md  docker-compose.yml  llms.txt  pyproject.toml  server.example.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: common.sh  hooks.json  session-end.sh  session-start.sh  user-prompt-submit.sh
.claude-plugin/scripts/: oc_memory.py  ruvector-server.js
.claude/commands/: opencortex-mcp.md
.github/workflows/: publish-opencortex-memory.yml  python-style.yml
_bmad-output/: memcortex-architecture-plan.md  memcortex-architecture.md  opencortex-porting-checklist.md  ruvector-api-reference.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-11T17-36-53+0800.md  brainstorming-session-2026-02-26.md
_bmad-output/test-artifacts/: automation-summary.md  test-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
benchmarks/: __init__.py  analyze_eval.py  llm_client.py  locomo_eval.py  locomo_eval.py.deprecated  metrics.py  oc_client.py  report.py  run_full_eval.sh  scoring.py  unified_eval.py
benchmarks/adapters/: __init__.py  base.py  beam.py  conversation.py  conversation_mapping.py  document.py  hotpotqa.py  knowledge.py  locomo.py  memory.py
benchmarks/reports/: conversation-eval_conversation_af2fa430.json
docs/: ace-design.md  architecture.md  claude-code-insights-internals-fork.md  claude-code-insights-internals.md  cortex-alpha-design.md  dataflow-lifecycle.md  feature-design-overview.md  knowledge-lifecycle-fix.md  mcp-server.md  memory-context-protocol.md  memory-enhancement-rationale.md  memory-test-plan.md  opencortex-product-overview.md  opencortex-technical-design.md  opencortex-terminology.md  openfang-memory-system.md  phase1-scaffold.md  supermemory-investigation-report.md
docs/architecture/: autophagy-cn.md  autophagy.md  cone-retrieval-cn.md  cone-retrieval.md  retrieval-service-boundary-assessment.md  skill-engine-cn.md  skill-engine.md  three-layer-storage-cn.md  three-layer-storage.md
docs/audits/: AUDIT_STORE_RECALL_PATHS.md  AUDIT_SUMMARY.txt
docs/benchmark/: 2026-04-11-LoCoMo.md  (+82 more)
eval/: locomo_eval.py
examples/: memory_eval_dataset.sample.json
scripts/: eval_memory.py  mcp-call.py  start-mcp.sh
src/memcortex/: cli.py  (+9 more)
tests/: README.md  _helpers.py  test_ace_multitenant_scope.py  test_ace_phase1.py  test_ace_phase2.py  test_ace_phase3.py  test_admin_health_connections.py  test_alpha_config.py  test_alpha_cutflow.py  test_alpha_http.py  test_alpha_knowledge_store.py  test_alpha_sandbox_integration.py  test_alpha_schemas.py  test_alpha_types.py  test_archivist.py  test_autophagy_kernel.py  test_background_task_manager.py  test_batch_add_hierarchy.py  test_beam_bench.py  test_benchmark_ingest_lifecycle.py  test_benchmark_ingest_response_model.py  test_benchmark_ingest_service.py  test_benchmark_llm_client.py  test_benchmark_runner.py  test_cached_embedder.py  test_cascade_qdrant_integration.py  test_case_memory.py  test_cognitive_metabolism.py  test_cognitive_state_store.py  test_collection_routing.py  test_cone_e2e.py  test_cone_scorer.py  test_connection_sweeper.py  test_consolidation_gate.py  test_context_flattening.py  test_context_manager.py  test_conversation_immediate.py  test_conversation_mapping.py  test_conversation_merge.py  test_cortexfs_async.py  (+109 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+498 files in other folders)
