[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencortex"
version = "0.2.0"
description = "Memory and context management system for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenCortex"}]
dependencies = [
    "fastmcp>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "volcengine-python-sdk>=5.0.12",
    "qdrant-client>=1.12.0",
]

[project.scripts]
opencortex-mcp = "opencortex.mcp_server:main"
opencortex-server = "opencortex.http.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
