[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencortex"
version = "0.6.1"
description = "Memory and context management system for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenCortex"}]
dependencies = [
    "orjson>=3.10",
    "fastmcp>=3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
parsers = [
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pdfplumber>=0.10",
    "ebooklib>=0.18",
]

[project.scripts]
opencortex-mcp = "opencortex.mcp_server:main"
opencortex-server = "opencortex.http.__main__:main"
opencortex-token = "opencortex.auth.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
