[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencortex"
version = "0.8.0"
description = "Memory and context management system for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenCortex"}]
dependencies = [
    "orjson>=3.10",
    "fastapi>=0.115.0",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "onnxruntime>=1.24.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "PyJWT>=2.8",
    "tokenizers>=0.22.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
parsers = [
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pdfplumber>=0.10",
    "ebooklib>=0.18",
]
training = [
    "joblib>=1.4",
    "scikit-learn>=1.5",
]

[project.scripts]
opencortex-server = "opencortex.http.__main__:main"
opencortex-token = "opencortex.auth.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
include = [
    "src/opencortex/http/__main__.py",
    "src/opencortex/http/client.py",
    "src/opencortex/http/models.py",
    "src/opencortex/http/request_context.py",
    "src/opencortex/http/server.py",
    "src/opencortex/skill_engine/http_routes.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "D",
    "E",
    "F",
    "I",
    "N",
    "RET",
    "RSE",
    "SIM",
    "TD",
    "W",
]
ignore = [
    "ANN401",
    "D100",
    "D104",
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/opencortex/skill_engine/http_routes.py" = ["ANN"]
